# IntermediateCG

./: .gitignore  CMakeLists.txt  README.md
Project2/: CMakeLists.txt
Project2/assets/shaders/: Fshader.glsl  Vshader.glsl
Project2/src/: Main.cpp  Main.h
Project2/src/OpenGLRenderer/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLCamera.cpp  OpenGLCamera.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Project2/src/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  RendererAPI.cpp  RendererAPI.h  RendererCommand.cpp  RendererCommand.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h
